# SolarScholar

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  rxconfig.py
SolarScholar/: SolarScholar.py  state.py
SolarScholar/components/: chat.py  navbar.py
