[tool.poetry]
name = "solarscholar"
version = "0.0.0"
description = ""
authors = ["RektPunk <rektpunk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.5.7"
langchain-upstage = "^0.1.7"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
